# DAMICDiffusion

./: .gitignore  LICENSE  README.md  coefficients.npy  diffusion_model_fit_parameters.py  diffusion_model_numeric_solutions.py  hole_drift_velocity_fit.py
muonAnalysis/: CMakeLists.txt  SetChain.C  analysis.c  clusterjob.sh  main.cxx  muonFilter.c  util.c
muonAnalysis/include/: analysis.h  muonFilter.h  muonFit.h  newdedxFilterTree.h  settings.h
muonAnalysis/plots/: compareChargeDist.cxx  compareChargeDistDedxScheme.cxx  plotDiffusionParameters.cxx  plotSigmaVDepth.cxx  plotXY.cxx  setupPlotXY.C  sigmavEnergy.cxx
muonAnalysis/src/: SetChain.C  analysis.cxx  muonFilter.cxx  muonFit.cxx  newdedxFilterTree.cxx  util.c
